fixed layout -> side not too wide on large screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,6 +214,12 @@ a:hover
 	max-width: 35px;
 }
 }
+@media(min-width:1300px) {
+.col-sm-9
+{
+max-width: 900px
+}
+}
 
 
 
